# mtp-server

./: CMakeLists.txt
debian/: changelog  control  copyright  libmtp-dev.install  libmtp1.install  mtp-examples.install  mtp-examples.mtp-server.upstart  mtp-server.conf  mtp-server.install  mtp-server.mtp-server-bootup.upstart  mtp-server.upstart  rules
examples/: CMakeLists.txt  MtpImageDatabase.h  StubMtpDatabase.h  server.cpp
include/: MtpDatabase.h  MtpDevice.h  MtpServer.h  MtpTypes.h
libusbhost/: CMakeLists.txt
server/: CMakeLists.txt  UbuntuMtpDatabase.h  server.cpp
src/: MtpDataPacket.cpp  MtpDevice.cpp  MtpDeviceInfo.cpp  MtpObjectInfo.cpp  MtpPacket.cpp  MtpProperty.cpp  MtpRequestPacket.cpp  MtpServer.cpp  MtpStorage.cpp  MtpStorageInfo.cpp  MtpUtils.cpp
tests/: CMakeLists.txt  MockMtpDatabase.h  TestMtpDebug.cpp  TestMtpPacket.cpp  TestMtpProperty.cpp  TestMtpServer.cpp  TestMtpStorage.cpp  TestMtpUtils.cpp
